[package]
name = "bamboo"
version = "0.1.0"
authors = ["safinsingh <safin.singh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
x11rb = "0.7.0"
cairo-rs = "0.9.0"
ctrlc = { version = "3.0", features = ["termination"] }
clap = "3.0.0-beta.2"
