[package]
name = "bamboo"
version = "0.1.0"
authors = ["safinsingh <safin.singh@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
cairo-rs = { version = "0.9.0", features = ["xcb"] }
cairo-sys-rs = "0.10.0"
clap = "3.0.0-beta.2"
colorsys = "0.6.0"
ctrlc = { version = "3.0", features = ["termination"] }
notify = "4.0.12"
regex = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
x11rb = { version = "0.7.0", features = ["allow-unsafe-code"] }
xcb = "0.9.0"

